
config("config") {
  include_dirs = [
    "//flutter/third_party/updater/library/include",
  ]
}

_public_headers = [
  "library/include/updater.h",
]

source_set("updater_headers") {
  public = _public_headers

  public_deps = []

  public_configs = [
    ":config",
    "//flutter:config",
  ]
}